docs/4.x/ssoadmin_permission_set.md
---
permalink: /ssoadmin_permission_set/
---

# ssoadmin_permission_set

`ssoadmin_permission_set` represents the `aws_ssoadmin_permission_set` Terraform resource.



This package contains functions and utilities for setting up the resource using Jsonnet code.


## Index

* [`fn new()`](#fn-new)
* [`fn newAttrs()`](#fn-newattrs)
* [`fn withDescription()`](#fn-withdescription)
* [`fn withInstanceArn()`](#fn-withinstancearn)
* [`fn withName()`](#fn-withname)
* [`fn withRelayState()`](#fn-withrelaystate)
* [`fn withSessionDuration()`](#fn-withsessionduration)
* [`fn withTags()`](#fn-withtags)
* [`fn withTagsAll()`](#fn-withtagsall)

## Fields

### fn new

```ts
new()
```


`aws.ssoadmin_permission_set.new` injects a new `aws_ssoadmin_permission_set` Terraform `resource`
block into the root module document.

Additionally, this inserts a private function into the `_ref` attribute that generates references to attributes of the
resource. For example, if you added a new instance to the root using:

    # arguments omitted for brevity
    aws.ssoadmin_permission_set.new('some_id')

You can get the reference to the `id` field of the created `aws.ssoadmin_permission_set` using the reference:

    $._ref.aws_ssoadmin_permission_set.some_id.get('id')

This is the same as directly entering `"${ aws_ssoadmin_permission_set.some_id.id }"` as the value.

NOTE: if you are chaining multiple resources together in a merge operation, you may not be able to use `super`, `self`,
or `$` to refer to the root object. Instead, make an explicit outer object using `local`.

**Args**:
  - `resourceLabel` (`string`): The name label of the block.
  - `description` (`string`):  When `null`, the `description` field will be omitted from the resulting object.
  - `instance_arn` (`string`): 
  - `name` (`string`): 
  - `relay_state` (`string`):  When `null`, the `relay_state` field will be omitted from the resulting object.
  - `session_duration` (`string`):  When `null`, the `session_duration` field will be omitted from the resulting object.
  - `tags` (`obj`):  When `null`, the `tags` field will be omitted from the resulting object.
  - `tags_all` (`obj`):  When `null`, the `tags_all` field will be omitted from the resulting object.

**Returns**:
- A mixin object that injects the new resource into the root Terraform configuration.


### fn newAttrs

```ts
newAttrs()
```


`aws.ssoadmin_permission_set.newAttrs` constructs a new object with attributes and blocks configured for the `ssoadmin_permission_set`
Terraform resource.

Unlike [aws.ssoadmin_permission_set.new](#fn-ssoadminpermissionsetnew), this function will not inject the `resource`
block into the root Terraform document. Instead, this must be passed in as the `attrs` argument for the
[tf.withResource](https://github.com/tf-libsonnet/core/tree/main/docs#fn-withresource) function to build a complete block.

This is most useful when you need to preprocess the attributes with functions, conditional, or looping logic prior to
injecting into a complete block.

**Args**:
  - `description` (`string`):  When `null`, the `description` field will be omitted from the resulting object.
  - `instance_arn` (`string`): 
  - `name` (`string`): 
  - `relay_state` (`string`):  When `null`, the `relay_state` field will be omitted from the resulting object.
  - `session_duration` (`string`):  When `null`, the `session_duration` field will be omitted from the resulting object.
  - `tags` (`obj`):  When `null`, the `tags` field will be omitted from the resulting object.
  - `tags_all` (`obj`):  When `null`, the `tags_all` field will be omitted from the resulting object.

**Returns**:
  - An attribute object that can be used with [tf.withResource](https://github.com/tf-libsonnet/core/tree/main/docs#fn-withresource) to construct a new `ssoadmin_permission_set` resource into the root Terraform configuration.


### fn withDescription

```ts
withDescription()
```

`aws.ssoadmin_permission_set.withDescription` constructs a mixin object that can be merged into the `ssoadmin_permission_set`
Terraform resource block to set or update the description field.



**Args**:
  - `resourceLabel` (`string`): The name label of the block to update.
  - `value` (`TODO`): The value to set for the `description` field.


### fn withInstanceArn

```ts
withInstanceArn()
```

`aws.ssoadmin_permission_set.withInstanceArn` constructs a mixin object that can be merged into the `ssoadmin_permission_set`
Terraform resource block to set or update the instance_arn field.



**Args**:
  - `resourceLabel` (`string`): The name label of the block to update.
  - `value` (`TODO`): The value to set for the `instance_arn` field.


### fn withName

```ts
withName()
```

`aws.ssoadmin_permission_set.withName` constructs a mixin object that can be merged into the `ssoadmin_permission_set`
Terraform resource block to set or update the name field.



**Args**:
  - `resourceLabel` (`string`): The name label of the block to update.
  - `value` (`TODO`): The value to set for the `name` field.


### fn withRelayState

```ts
withRelayState()
```

`aws.ssoadmin_permission_set.withRelayState` constructs a mixin object that can be merged into the `ssoadmin_permission_set`
Terraform resource block to set or update the relay_state field.



**Args**:
  - `resourceLabel` (`string`): The name label of the block to update.
  - `value` (`TODO`): The value to set for the `relay_state` field.


### fn withSessionDuration

```ts
withSessionDuration()
```

`aws.ssoadmin_permission_set.withSessionDuration` constructs a mixin object that can be merged into the `ssoadmin_permission_set`
Terraform resource block to set or update the session_duration field.



**Args**:
  - `resourceLabel` (`string`): The name label of the block to update.
  - `value` (`TODO`): The value to set for the `session_duration` field.


### fn withTags

```ts
withTags()
```

`aws.ssoadmin_permission_set.withTags` constructs a mixin object that can be merged into the `ssoadmin_permission_set`
Terraform resource block to set or update the tags field.



**Args**:
  - `resourceLabel` (`string`): The name label of the block to update.
  - `value` (`TODO`): The value to set for the `tags` field.


### fn withTagsAll

```ts
withTagsAll()
```

`aws.ssoadmin_permission_set.withTagsAll` constructs a mixin object that can be merged into the `ssoadmin_permission_set`
Terraform resource block to set or update the tags_all field.



**Args**:
  - `resourceLabel` (`string`): The name label of the block to update.
  - `value` (`TODO`): The value to set for the `tags_all` field.
